[gd_scene load_steps=4 format=3 uid="uid://gcjunndw6jc7"]

[ext_resource type="Script" path="res://towers/discShooter.gd" id="1_fv5p4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0k1ym"]
radius = 370.0

[sub_resource type="CircleShape2D" id="CircleShape2D_74q31"]
radius = 50.0

[node name="discShooter" type="CharacterBody2D" groups=["towers"]]
scale = Vector2(0.8, 0.8)
collision_layer = 10
collision_mask = 3
script = ExtResource("1_fv5p4")

[node name="noticeArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="noticeArea"]
position = Vector2(-0.37542, -0.0834274)
shape = SubResource("CircleShape2D_0k1ym")
debug_color = Color(0.0823529, 0.0823529, 0.054902, 0.470588)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_74q31")

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-48.3095, -12.9336, -49.998, 0.00346327, -48.2929, 12.9653, -43.277, 25.0416, -35.3145, 35.4044, -24.9764, 43.3173, -12.9168, 48.3084, 0.00370979, 50.0052, 12.9076, 48.3084, 25.0087, 43.309, 35.355, 35.3382, 43.3258, 24.9753, 48.2969, 12.9531, 49.9922, 0, 48.2969, -12.8906, 43.3125, -24.9766, 35.375, -35.3516, 25.0313, -43.3047, 14.8302, -48.0673, 11.1371, -49.1242, 8.9249, -49.9206, 7.39111, -50.953, 6.56914, -52.2487, 5.65144, -74.649, -4.4397, -74.7241, -4.90214, -52.7492, -5.52785, -51.2893, -6.82098, -49.9961, -8.94837, -48.995, -12.9297, -48.2813, -25.0313, -43.2891, -35.3672, -35.3516, -43.3019, -25.0015)

[node name="Marker2D" type="Marker2D" parent="Polygon2D"]
position = Vector2(0.243256, -74.3728)

[node name="shootDelay" type="Timer" parent="."]
wait_time = 0.3

[connection signal="body_entered" from="noticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="body_exited" from="noticeArea" to="." method="_on_notice_area_body_exited"]
[connection signal="timeout" from="shootDelay" to="." method="_on_shoot_delay_timeout"]
